# infernus

./: .gitignore  install.sh  pyproject.toml
infernus/: jobmem.py  model_utils.py  noise_utils.py  postprocessing.py  real_utils.py
infernus/serving/: run_tritonserver_array.sh
infernus/serving/convert_model/: onnx_modify.py  save_tf_model.py
share/: make_model_repos.sh  model_repos_new.sh
